berhasil memperbaiki bug scroll meski overflow: hidden;

--- a/login/style.css
+++ b/login/style.css
@@ -1,76 +1,86 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    border: none;
+    overflow: hidden;
 }
 
-body{
+body {
     background: linear-gradient(to right, #fff7f3, #ffdcc8);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    max-width: 100vw;
-    height: 100vh;
-    overflow: hidden !important;
+    min-height: 100vh;
+    width: 100vw;
 }
 
-.container{
+.notif {
+    position: absolute;
+    top: 1rem;
+    right: 0;
+    /* transform: translateX(100%); */
+}
+
+.container-content {
+    /* background-color: red; */
+    position: relative;
+    min-height: 100vh;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
     background-color: #fff;
+    width: 55%;
+    min-height: 420px;
+    position: relative;
     border-radius: 30px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
-    position: relative;
-    overflow: hidden;
-    width: 60vw;
-    max-width: 100%;
-    min-height: 480px;
-}
-
-.container p{
-    font-size: 14px;
-    line-height: 20px;
-    letter-spacing: 0.3px;
-    margin: 20px 0;
-}
-
-.container span{
-    font-size: 12px;
-}
-
-.container a{
     color: #333;
-    font-size: 13px;
+}
+
+.container p {
+    font-size: .8rem;
+    line-height: 1.2rem;
+    letter-spacing: 0.3px;
+    margin: 1rem 0;
+}
+.container span {
+    font-size: .7rem;
+}
+.container a {
+    color: #333;
+    font-size: .8rem;
     text-decoration: none;
     margin: 15px 0 10px;
 }
 
-.container button{
+.container button {
     background-color: #f27531;
     color: #fff;
-    font-size: 12px;
-    padding: 10px 45px;
-    border: 1px solid transparent;
-    border-radius: 8px;
+    font-size: .8rem;
+    padding: .5rem 2.5rem;
+    border-radius: .4rem;
     font-weight: 600;
     letter-spacing: 0.5px;
     text-transform: uppercase;
-    margin-top: 10px;
+    margin-top: .6rem;
     cursor: pointer;
 }
-
-.container button.hidden{
+.container button.hidden {
     background-color: transparent;
-    border-color: #fff;
+    border: 1px solid #fff;
 }
 
-.container form{
+.container form {
     background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 0 40px;
+    padding: 0 2.5rem;
     height: 100%;
     animation: scale 1.5s forwards;
 }
@@ -83,7 +93,7 @@ body{
     }
 }
 
-.container input{
+.container input {
     background-color: #eee;
     border: none;
     margin: 8px 0;
@@ -94,36 +104,37 @@ body{
     outline: none;
 }
 
-.form-container{
+.form-container {
     position: absolute;
     top: 0;
     height: 100%;
     transition: all 0.6s ease-in-out;
 }
 
-.sign-in{
+/* Sign In - Login */
+.sign-in {
     left: 0;
     width: 50%;
     z-index: 2;
 }
-.container.active .sign-in{
+.container.active .sign-in {
     transform: translateX(100%);
 }
 
-.sign-up{
+/* Sign Up - Daftar */
+.sign-up {
     left: 0;
     width: 50%;
     opacity: 0;
     z-index: 1;
 }
-.container.active .sign-up{
+.container.active .sign-up {
     transform: translateX(100%);
     opacity: 1;
     z-index: 5;
     animation: move 0.6s;
 }
-
-@keyframes move{
+@keyframes move {
     0%, 49.99%{
         opacity: 0;
         z-index: 1;
@@ -134,10 +145,9 @@ body{
     }
 }
 
-.social-icons{
-    margin: 20px 0;
+.social-icons {
+    margin: 1rem 0;
 }
-
 .social-icons a{
     border: 1px solid #ccc;
     border-radius: 20%;
@@ -145,13 +155,12 @@ body{
     justify-content: center;
     align-items: center;
     margin: 0 3px;
-    width: 40px;
-    height: 40px;
+    width: 2.4rem;
+    height: 2.4rem;
 }
 
-
-/* ======================== */
-.toggle-container{
+/* ========== TOGGLE ========== */
+.toggle-container {
     position: absolute;
     top: 0;
     left: 50%;
@@ -162,13 +171,12 @@ body{
     border-radius: 120px 0 0 90px;
     z-index: 1000;
 }
-
-.container.active .toggle-container{
+.container.active .toggle-container {
     transform: translateX(-100%);
     border-radius: 0 120px 90px 0;
 }
 
-.toggle{
+.toggle {
     background-color: #f27531;
     color: #fff;
     position: relative;
@@ -178,12 +186,11 @@ body{
     transform: translateX(0);
     transition: all 0.6s ease-in-out;
 }
-
-.container.active .toggle{
+.container.active .toggle {
     transform: translateX(50%);
 }
 
-.toggle-panel{
+.toggle-panel {
     position: absolute;
     width: 50%;
     height: 100%;
@@ -191,7 +198,7 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 0 30px;
+    padding: 0 1.5rem;
     text-align: center;
     top: 0;
     transform: translateX(0);
@@ -202,20 +209,20 @@ body{
     font-size: 1.5rem;
 }
 
-.toggle-left{
+/* Toggle Masuk */
+.toggle-left {
     transform: translateX(-200%);
 }
-
-.container.active .toggle-left{
+.container.active .toggle-left {
     transform: translateX(0);
 }
 
-.toggle-right{
+/* Toggle Daftar */
+.toggle-right {
     right: 0;
     transform: translateX(0);
 }
-
-.container.active .toggle-right{
+.container.active .toggle-right {
     transform: translateX(200%);
 }
 
@@ -248,7 +255,7 @@ body{
     100%{box-shadow: 10px 0 #fff2,-10px 0 #fff; background: #fff }
 }
 
-/* Notif */
+/* Notifikasi */
 .notif::before {
     content: '';
     display: block;
@@ -275,7 +282,6 @@ body{
     font-size: .9rem;
     border-radius: .2rem;
 }
-
 .notif.active {
     right: 1rem;
     animation: notif 4s forwards; /* 2s masuk, 2s bertahan, 2s keluar */
@@ -302,7 +308,6 @@ body{
     }
 }
 
-
 .notif span {
     display: inline-flex;
     justify-content: center;
@@ -315,75 +320,57 @@ body{
 }
 
 
-/* Query */
-/* Responsive adjustments for tablets */
+/* ==================== Media Query ==================== */
+@media (max-width: 1000px) {
+    .container {
+        width: 70%;
+    }
+}
+/* Tablet */
 @media (max-width: 768px) {
-    body {
-        width: 100vw;
-        height: 100vh;
-        padding: 0 !important;
+    html {
+        font-size: 90%;
     }
 
     .container {
-        width: 90vw;
-        min-height: 400px;
+        width: 85%;
+        min-height: 380px;
     }
 
     .toggle-container {
         border-radius: 90px 0 0 60px;
     }
 
-    .container button {
-        padding: 8px 35px;
-        font-size: 11px;
-    }
-
-    
-    .container form span {
-        text-align: center;
-        font-size: 70%;
-    }
-    
     .container input {
         padding: 8px 12px;
         font-size: 12px;
     }
-
-    .toggle-panel h1 {
-        font-size: 1.1rem; 
-    }
-
-    .container p {
-        font-size: .8rem;
-    }
-
-    .social-icons a {
-        width: 35px;
-        height: 35px;
-    }
 }
 
-
+/* Handphone */
 @media (max-width: 568px) {
-    body {
-        width: 100vw;
-        overflow: hidden !important;
+    html {
+        font-size: 100%;
     }
 
     .container {
-        width: 70vw;
-        min-height: 450px;
+        width: 70%;
+        min-height: 420px;
     }
 
-    .container form {
-        padding: 0 2rem;
+    .sign-in, .sign-up {
+        width: 100%;
+    }
+
+    .toggle-container {
+        display: none;
     }
 
     .container form p {
         display: inline-block;
         font-size: .8rem;
+        margin: 1.2rem 0 .2rem;
     }
-
     .container form p span {
         font-size: .8rem;
         transition: .1s;
@@ -391,15 +378,7 @@ body{
         color: #f27531; 
     }
     .container form p span:hover {
-        font-size: .85rem;
-    }
-
-    .toggle-container {
-        display: none;
-    }
-
-    .sign-in, .sign-up {
-        width: 100%;
+        font-size: .82rem;
     }
 
     .container button {
